index & package json

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <base href="/" />
@@ -10,8 +10,11 @@
 
     <!-- application css -->
     <!-- <link href="app.css" rel="stylesheet" /> -->
-
-    <!-- polyfill(s) for older browsers -->
+    <script src="/js/vendor/fingerprint2.js"></script>
+    <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
+    <script src="https://media.twiliocdn.com/sdk/js/chat/v1.0/twilio-chat.min.js"></script>
+  
+    <!-- polyfill(s) for older browsers -->    
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
