--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- application css -->
     <!-- <link href="app.css" rel="stylesheet" /> -->
     <script src="/js/vendor/fingerprint2.js"></script>
     <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
     <script src="https://media.twiliocdn.com/sdk/js/chat/v1.0/twilio-chat.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
     <!-- polyfill(s) for older browsers -->    
     <script src="node_modules/core-js/client/shim.min.js"></script>
